--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head> 
 <body>
  <div class="kartu-profil">
-  <img src="foto-profil.jpg" alt="foto profil saya">
+  <img src="foto-profil.png" alt="foto profil saya">
   <h1>Salman fariziy</h1>
   <p>hanya seorang pelajar yang ingin mencapai bintang </p>
   <a href="https://www.instagraam.com/sasal_pA">sini gessssss </a> 
