--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <img src="foto-profil.png" alt="foto profil saya">
   <h1>Salman fariziy</h1>
   <p>hanya seorang pelajar yang ingin mencapai bintang </p>
-  <a href="https://www.instagraam.com/sasal_pA">sini gessssss </a> 
+  <a href="https://www.instagram.com/salman_fariziy/">sini gessssss </a> 
    <button id="sapa Button">Sapa Saya!</button>
  </div>
 <script src="script.js"></script>
