--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <img src="foto-profil.png" alt="foto profil saya">
   <h1>Salman fariziy</h1>
   <p>hanya seorang pelajar yang ingin mencapai bintang </p>
-  <a href="www.instagram.com/salman_fariziy/">sini gessssss </a> 
-   <button id="sapa Button">Sapa Saya!</button>
+  <a href="https://www.instagram.com/salman_fariziy/">follow ig kids </a> 
+   
  </div>
 <script src="script.js"></script>
 </body>
