--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Salman fariziy</h1>
   <p>hanya seorang pelajar yang ingin mencapai bintang </p>
   <a href="https://www.instagram.com/salman_fariziy/">follow ig kids </a> 
-   
+  <button id="Sapa Button">Sapa Saya!</button> 
  </div>
 <script src="script.js"></script>
 </body>
