--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="video-wrapper">
             <video controls controlsList="nodownload" poster="https://i.imgur.com/8QQZ5Xq.png">
-                <source src="proklamasi.mp4" type="video/mp4">
+                <source src="Proklamasi.mp4" type="video/mp4">
                 Browser Anda tidak mendukung tag video. Silakan perbarui browser Anda.
             </video>
         </div>
