--- a/index.html
+++ b/index.html
@@ -3,155 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arsip Sejarah: Proklamasi 1945</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lora:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
-    
+    <title>Proklamasi Kemerdekaan Indonesia</title>
+
     <style>
-        /* RESET & DASAR */
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-
         body {
-            background: radial-gradient(circle at 50% 0%, #3a0e0e 0%, #000000 60%);
-            color: #ecf0f1;
-            font-family: 'Lora', serif;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            margin: 0;
+            padding: 16px;
         }
-
-        /* CONTAINER UTAMA */
-        .museum-card {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            max-width: 900px;
-            width: 100%;
-            overflow: hidden;
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
-            animation: fadeIn 1.5s ease-out;
-        }
-
-        /* HEADER */
-        header {
-            text-align: center;
-            padding: 40px 20px 20px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-        }
-
         h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: 2.5rem;
-            color: #e74c3c;
-            text-transform: uppercase;
-            letter-spacing: 3px;
-            margin-bottom: 5px;
-            text-shadow: 0 2px 10px rgba(231, 76, 60, 0.3);
+            text-align: center;
+            color: #b71c1c;
         }
-
-        .subtitle {
-            color: #bdc3c7;
-            font-size: 0.9rem;
-            letter-spacing: 1px;
-            text-transform: uppercase;
+        .box {
+            background: #ffffff;
+            padding: 16px;
+            border-radius: 8px;
         }
-
-        /* AREA VIDEO */
-        .video-container {
-            position: relative;
-            width: 100%;
-            background: #000;
-        }
-
         video {
             width: 100%;
-            display: block;
-            max-height: 70vh;
+            border-radius: 8px;
+            margin: 12px 0;
+            background: black;
         }
-
-        /* AREA PENJELASAN */
-        .content {
-            padding: 40px;
-            line-height: 1.8;
-            font-size: 1.1rem;
-            color: #dcdcdc;
+        p {
+            text-align: justify;
+            font-size: 14px;
+            line-height: 1.6;
         }
-
-        .content p { margin-bottom: 20px; }
-
-        .dropcap {
-            float: left;
-            font-family: 'Playfair Display', serif;
-            font-size: 3.5rem;
-            line-height: 0.8;
-            margin-right: 10px;
-            color: #e74c3c;
-        }
-
-        .quote-box {
-            background: rgba(231, 76, 60, 0.1);
-            border-left: 4px solid #e74c3c;
-            padding: 15px 20px;
-            margin: 20px 0;
-            font-style: italic;
-            font-size: 0.95rem;
-        }
-
         footer {
             text-align: center;
-            padding: 20px;
-            font-size: 0.8rem;
-            color: #555;
-            border-top: 1px solid rgba(255, 255, 255, 0.05);
-        }
-
-        @media (max-width: 600px) {
-            h1 { font-size: 1.8rem; }
-            .content { padding: 20px; font-size: 1rem; }
-            .dropcap { font-size: 3rem; }
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+            font-size: 12px;
+            color: #777;
+            margin-top: 16px;
         }
     </style>
 </head>
 <body>
 
-    <div class="museum-card">
-        <header>
-            <h1>Merdeka!</h1>
-            <div class="subtitle">Arsip Nasional Republik Indonesia</div>
-        </header>
+<h1>Proklamasi Kemerdekaan Indonesia</h1>
 
-        <div class="video-container">
-            <video controls controlsList="nodownload" poster="thumbnail.jpg">
-                <source src="Proklamasi.mp4" type="video/mp4">
-                Browser Anda tidak mendukung pemutaran video ini.
-            </video>
-        </div>
+<div class="box">
 
-        <div class="content">
-            <p>
-                <span class="dropcap">V</span>ideo ini merekam momen paling sakral dalam sejarah bangsa Indonesia. Pada hari Jumat, 17 Agustus 1945, di tengah ketidakpastian pasca kekalahan Jepang, Bung Karno dengan lantang membacakan naskah Proklamasi yang menandai lahirnya sebuah negara baru.
-            </p>
+    <p>
+        Proklamasi Kemerdekaan Republik Indonesia dibacakan pada
+        tanggal 17 Agustus 1945 oleh Ir. Soekarno sebagai tanda
+        lahirnya negara Indonesia yang merdeka.
+    </p>
 
-            <div class="quote-box">
-                "Kami bangsa Indonesia dengan ini menjatakan Kemerdekaan Indonesia..."
-            </div>
+    <!-- VIDEO OFFLINE + THUMBNAIL -->
+    <video controls poster="thumbnail.jpg">
+        <source src="Proklamasi_144p.mp4" type="video/mp4">
+        Browser tidak mendukung video.
+    </video>
 
-            <p>
-                Rekaman visual ini sangat langka dan berharga. Meskipun singkat dan sederhana, ia menjadi saksi bisu bagaimana semangat para pendiri bangsa dikumandangkan dari Jalan Pegangsaan Timur No. 56, Jakarta, menggema ke seluruh penjuru nusantara dan dunia.
-            </p>
-        </div>
+    <p>
+        Peristiwa ini berlangsung di Jalan Pegangsaan Timur No. 56,
+        Jakarta, dan menjadi tonggak penting dalam sejarah bangsa Indonesia.
+    </p>
 
-        <footer>
-            &copy; 1945 - 2026 Arsip Digital Sejarah Indonesia
-        </footer>
-    </div>
+</div>
+
+<footer>
+    Materi Sejarah Indonesia
+</footer>
 
 </body>
 </html>
