Update video source file in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!-- VIDEO OFFLINE + THUMBNAIL -->
     <video controls poster="thumbnail.jpg">
-        <source src="Proklamasi_144p.mp4" type="video/mp4">
+        <source src="Proklamasi.mp4" type="video/mp4">
         Browser tidak mendukung video.
     </video>
 
