Update profile image in index.html

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
         <div class="profile-section">
             <div class="avatar-container">
-                <img src="foto-profil.png" alt="Salman Fariziy" class="avatar-img">
+                <img src="IMG_20260127_130659.jpg" alt="Salman Fariziy" class="avatar-img">
             </div>
             <h1 class="name">SALMAN FARIZIY</h1>
             <span class="role-badge">Siswa SMA & Web Developer</span>
