Update skill levels and educational details in HTML

--- a/index.html
+++ b/index.html
@@ -413,12 +413,12 @@
                     </summary>
                     <div class="details-content">
                         <div class="skill-group">
-                            <div class="skill-meta"><span>HTML & CSS (Dasar Kuat)</span><span>90%</span></div>
-                            <div class="skill-track"><div class="skill-fill" style="width: 90%;"></div></div>
+                            <div class="skill-meta"><span>HTML & CSS (Dasar Kuat)</span><span>80%</span></div>
+                            <div class="skill-track"><div class="skill-fill" style="width: 80%;"></div></div>
                         </div>
                         <div class="skill-group">
-                            <div class="skill-meta"><span>Bahasa Indonesia</span><span>100%</span></div>
-                            <div class="skill-track"><div class="skill-fill" style="width: 100%;"></div></div>
+                            <div class="skill-meta"><span>C++ (Basic)</span><span>60%</span></div>
+                            <div class="skill-track"><div class="skill-fill" style="width: 60%;"></div></div>
                         </div>
                          <div class="skill-group">
                             <div class="skill-meta"><span>Bahasa Inggris (Pasif)</span><span>75%</span></div>
@@ -460,13 +460,13 @@
                     <div class="details-content">
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
-                            <span class="t-role">SMA [Nama Sekolah Kamu]</span>
-                            <span class="t-date">Jurusan IPA/IPS | 2022 - Sekarang</span>
+                            <span class="t-role">SMA Negeri 1 Kedungpring</span>
+                            <span class="t-date">XI-C1 | 2022 - Sekarang</span>
                             <p class="t-desc">Saat ini duduk di Kelas 11 (2 SMA). Aktif mengikuti kegiatan ekstrakurikuler teknologi.</p>
                         </div>
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
-                            <span class="t-role">SMP [Nama Sekolah Dulu]</span>
+                            <span class="t-role">SMP Negeri 1 Sugio</span>
                             <span class="t-date">Lulusan Tahun 2022</span>
                             <p class="t-desc">Menyelesaikan pendidikan menengah pertama dengan baik.</p>
                         </div>
